--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "author": "Diego Fernandes <diego.schell.f@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev:server": "ts-node-dev src/server.ts --transpile-only --ignore-watch node_modules --respawn",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
@@ -13,15 +14,15 @@
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
     "sqlite3": "^5.0.0",
-    "typeorm": "^0.2.28",
-    "typescript": "^4.0.3",
+    "typeorm": "^0.2.26",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.8",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/multer": "^1.4.4",
-    "@types/yup": "^0.29.8",
-    "ts-node-dev": "^1.0.0-pre.63"
+    "@types/yup": "^0.29.7",
+    "ts-node-dev": "^1.0.0-pre.63",
+    "typescript": "^4.0.3"
   }
 }
