--- a/mob/app.json
+++ b/mob/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
-    "name": "mob",
-    "slug": "mob",
+    "name": "mobile",
+    "slug": "mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#17BDCD"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
